--- a/templates/reports.html
+++ b/templates/reports.html
@@ -15,6 +15,7 @@
                 <th class="text-left p-2">Название</th>
                 <th class="text-left p-2">Время запуска</th>
                 <th class="text-left p-2">Время завершения</th>
+                <th class="text-left p-2">Окружение</th>
                 <th class="text-left p-2">Статус</th>
                 <th class="text-left p-2">Действие</th>
             </tr>
@@ -27,6 +28,7 @@
                 <td class="p-2">{{ result.run_name }}</td>
                 <td class="p-2">{{ result.start_date }}</td>
                 <td class="p-2">{{ result.end_date }}</td>
+                <td class="p-2">{{ result.stand or '-' }}</td>
                 <td class="p-2">{{ result.status }}</td>
                 <td class="p-2">
                     <a href="/reports/{{ result.id }}" class="text-blue-500 underline" target="_blank">Открыть</a>
